2013-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/Makefile.in:
	  STM8: Enable building standard library.

2013-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/main.c:
	  STM8: Applied patch from Valentin Dudouyt to implement __critical.

2013-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/stm8/Makefile.in:
	  STM8: Disable building some library files.
	* src/stm8/gen.c:
	  STM8: Fix comparison.
	* src/stm8/main.c:
	  STM8: Disable some annoying debug output.

2013-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  sdas/asstm8/stm8mch.c:
	  STM8: Applied patch from Valentin Dudouyt to support addw sp, #byte.
	* src/stm8/ralloc2.cc:
	  STM8: Enabled cost function for more iCodes.
	* src/stm8/gen.c:
	  STM8: Fixes for logic ops, RETURN, '-', stack-to-stack copy, implement more operands for comparison.

2013-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Disable generation of jump tables.
	* src/stm8/gen.c:
	  STM8: Implement more comparison operands, fix for stack-to-stack temporary assignment.

2013-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Endianness fixes, implement dummy pointer reads, implement '!', implement more operands in logic ops, implement more return operands, implement more operands for cast to _Bool, implement more operands for subtraction.

2013-04-18 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/libdev/mkall.sh,
	  device/examples/mcs51/simple/test,
	  device/examples/mcs51/simple/go,
	  device/examples/mcs51/simple2/go,
	  device/examples/mcs51/simple2/test,
	  sim/ucsim/conf:
	  use /bin/sh instead of /bin/bash to enable compilation on OpenBSD

2013-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix for cast to bool.

2013-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: