@@ -1,0 +1,16 @@
+
+void
+_putchar(unsigned char c)
+{
+}
+
+void
+_initEmu(void)
+{
+}
+
+void
+_exitEmu(void)
+{
+}
+
